crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_enum_with_type_annotation.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = [A: (identifier) @id B: (number) @num] @expr :: Expression
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "A"
S4 "B"
S5 "expr"
S6 "Test"
S7 "Expression"
S8 "identifier"
S9 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { num }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { expr }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; num: <Node>
M2: S3 → T1  ; A: T1
M3: S4 → T2  ; B: T2
M4: S5 → T3  ; expr: Expression

[type_names]
N0: S6 → T4  ; Test
N1: S7 → T3  ; Expression

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   ε                                    16, 22
  09                                        ▶
  10   ε   [Set(M4)]                        09
  12   ε   [EndEnum]                        10
  14   !   (identifier) [Node Set(M0)]      12
  16   ε   [Enum(M2)]                       14
  18   ε   [EndEnum]                        10
  20   !   (number) [Node Set(M1)]          18
  22   ε   [Enum(M3)]                       20
