crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_multiple.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (binary_expression (identifier) @a (number) @b)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "Test"
S4 "binary_expression"
S5 "number"
S6 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = Struct  M2:1  ; { a }
T3 = Struct  M3:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S1 → T0  ; a: <Node>
M3: S2 → T0  ; b: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 1 :: T1

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2       (binary_expression)               3
  3   ▽   (identifier) [Node Set(M0)]       5
  5   ▷   (number) [Node Set(M1)]           7
  7   △                                     8
  8                                         ▶
