crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_nested_flat.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (a (b (c) @c) @b) @a
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "c"
S4 "Test"

[type_defs]
T0 = <Node>
T1 = Struct  M0:3  ; { a, b, c }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T0  ; c: <Node>

[type_names]
N0: S4 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00  𝜀                                     ◼

Test:
  01  𝜀                                     02
  02       (a) [Node Set(M0)]               04
  04  ↓*   (b) [Node Set(M1)]               06
  06  ↓*   (c) [Node Set(M2)]               08
  08 *↑¹                                    09
  09 *↑¹                                    10
  10                                        ▶
