crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_optional_wrapper_struct.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = {{(identifier) @id} @inner}? @outer
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "inner"
S3 "outer"
S4 "Test"
S5 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { inner }
T3 = Struct  M2:1  ; { outer }
T4 = Struct  M3:1  ; { inner }
T5 = Optional(T1)  ; T1?
T6 = Optional(T2)  ; T2?

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T5  ; inner: T5
M2: S3 → T6  ; outer: T6
M3: S2 → T1  ; inner: T1

[type_names]
N0: S4 → T3  ; Test

[entrypoints]
Test = 01 :: T3

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε   [Obj]                            06
  06   ε                                    26, 19
  08                                        ▶
  09   ε   [EndObj]                         08
  11   ε   [EndObj Set(M2)]                 09
  13   ε   [EndObj Set(M1)]                 11
  15       (identifier) [Node Set(M0)]      13
  17   ε   [Obj]                            15
  19   ε   [Null Set(M1)]                   11
  21   ▷                                    24
  22   ε                                    21, 19
  24   ε                                    17, 22
  26   ▽                                    24
