crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_struct_scope.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = {(a) @a (b) @b} @item
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "item"
S4 "Test"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = Struct  M2:1  ; { item }
T3 = Struct  M3:1  ; { a }
T4 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; item: T1
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T2  ; Test

[entrypoints]
Test = 01 :: T2

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε   [Obj]                            06
  06  ‼·   (a) [Node Set(M0)]               08
  08   ▷   (b) [Node Set(M1)]               10
  10   ε   [EndObj Set(M2)]                 12
  12   ε   [EndObj]                         14
  14                                        ▶
