crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_with_type_custom.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier) @name :: Identifier
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "Identifier"
S2 "name"
S3 "Test"
S4 "identifier"

[type_defs]
T0 = <Node>
T1 = Alias(T0)
T2 = Struct  M0:1  ; { name }

[type_members]
M0: S2 → T1  ; name: Identifier

[type_names]
N0: S1 → T1  ; Identifier
N1: S3 → T2  ; Test

[entrypoints]
Test = 1 :: T2

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2   ε   [Obj]                             4
  4  ‼·   (identifier) [Node Set(M0)]       6
  6   ε   [EndObj]                          8
  8                                         ▶
