crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_with_type_string.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (identifier) @name :: string
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <String>
T1 = Struct  M0:1  ; { name }

[type_members]
M0: S1 → T0  ; name: <String>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 1 :: T1

[transitions]
  0   ε                                     ◼

Test:
  1   ε                                     2
  2       (identifier) [Text Set(M0)]       4
  4                                         ▶
